# CADET-Verification

./: .cadet-rdm-data.json  .gitignore  1CompLin2D.h5  2CompLin2D.h5  2CompLin2D.json  Dockerfile  Dockerfile.conda  GPR_Shallow_MLP_7.py  GPR_Shallow_RBF_15.py  README.md  check_LRM_2comp.h5  codecov.yml  conftest.py  cry_ref.py  environment.yml  eoc_FV_nonEquidistant.py  eoc_radialFV_nonEquidistant.py  fuck.py  generate_casema_references.py  jojo.h5  jojo1D.h5  jojo2D.h5  jojoLin2D.h5  kauthar_frustum.py  linear1Dvs2D.py  performance.py  pyproject.toml  run_study1_GRM_SMA.py  sma1Dvs2D.py  temp_method0_ref1.h5  temp_method0_ref16.h5  temp_method0_ref2.h5  temp_method0_ref32.h5  temp_method0_ref4.h5  temp_method0_ref64.h5  temp_method0_ref8.h5  temp_method3_ref1.h5  temp_method3_ref16.h5  temp_method3_ref2.h5  temp_method3_ref32.h5  (+10 more)
data/: ref_CSTR_ASM3hC_simulation_results.xlsx
scripts/: FAIRST_score_radarPlot.py  eoc_2D_bulk.py  generate_analytical_references.py  generate_casema_references.py  test_analytical_vs_casema.py  test_debug.py  verify_2dDG.py  verify_cadet-core.py  vid_2D_column_migration.py
src/: 2D_EOC_performance_eval.py  DG2D_radConst.py  DG2D_radEpsB.py  MCT.py  bench_configs.py  bench_func.py  binding_GPR.py  binding_train_ML_langmuir.py  binding_train_gpr_langmuir.py  bindings.py  chrom_systems.py  chromatography.py  chromatography_sensitivities.py  crystallization.py  crystallization_partI.py  crystallization_partII.py  debug_script.py  generalized_unit_benchmark.py  gpr_training.py  multiple_reaction_configs.py  multiple_reactions.py  radialDG.py  (+20 more)
(+196 files in other folders)
